[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameMenu.gd" type="Script" id=1]
[ext_resource path="res://MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://BodyPartsControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/lapis_lazuli.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Fonts/SuperLegendBoy-4w8Y.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="GameMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -751.0
margin_top = -433.0
margin_right = 727.0
margin_bottom = 499.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 0.615686 )

[node name="Vbox" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -46.0
margin_right = -6.0
margin_bottom = 140.0

[node name="Return" type="Button" parent="Control/Vbox"]
margin_right = 191.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../MainMenu")
focus_neighbour_bottom = NodePath("../Restart")
focus_next = NodePath("../Restart")
focus_previous = NodePath("../MainMenu")
text = "Return"
icon_align = 1

[node name="Restart" type="Button" parent="Control/Vbox"]
margin_top = 29.0
margin_right = 191.0
margin_bottom = 54.0
focus_neighbour_top = NodePath("../Return")
focus_neighbour_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Return")
keep_pressed_outside = true
text = "Restart level"
icon_align = 1

[node name="Exit" type="Button" parent="Control/Vbox"]
margin_top = 58.0
margin_right = 191.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../Restart")
focus_neighbour_bottom = NodePath("../MainMenu")
focus_next = NodePath("../MainMenu")
focus_previous = NodePath("../Restart")
keep_pressed_outside = true
text = "Exit Level"
icon_align = 1

[node name="MainMenu" type="Button" parent="Control/Vbox"]
margin_top = 87.0
margin_right = 191.0
margin_bottom = 112.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Return")
focus_next = NodePath("../Return")
focus_previous = NodePath("../Exit")
text = "Main Menu"
icon_align = 1

[node name="BodyPartsControl" parent="Control" instance=ExtResource( 3 )]
margin_top = 26.0
margin_bottom = 66.0

[node name="Lapis" type="Sprite" parent="Control"]
position = Vector2( -130, 92 )
texture = ExtResource( 4 )

[node name="LapisCounter" type="RichTextLabel" parent="Control"]
margin_left = -112.0
margin_top = 86.0
margin_right = -62.0
margin_bottom = 126.0
custom_colors/default_color = Color( 0.713726, 0.568627, 0.223529, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = " x 99"

[connection signal="pressed" from="Control/Vbox/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Control/Vbox/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/Vbox/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/Vbox/MainMenu" to="." method="_on_MainMenu_pressed"]
